Minor UI Changes

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayush's Website</title>
+    <title>Ayush Kumar | Junior Undergraduate IITK</title>
     <meta name="description" content="Hi, I am Ayush. I am trying my hands on Web Development.">
     <meta itemprop="name" content="Ayush Kumar | Frontend Web Developer">
     <meta itemprop="description" content="Hi, I am Ayush. I am trying my hands on Web Development.">
-    <meta itemprop="image" content="/meta.68c3c419.jpg">
+    <!-- <meta itemprop="image" content="/meta.68c3c419.jpg"> -->
     <!-- <meta property="og:url" content="http://Ayush.surge.sh"> -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Ayush Kumar | Frontend Web Developer">
     <meta property="og:description" content="Hi, I am Ayush. I am trying my hands on Web Development.">
-    <meta property="og:image" content="/meta.68c3c419.jpg">
+    <!-- <meta property="og:image" content="/meta.68c3c419.jpg"> -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ayush Kumar | Frontend Web Developer">
     <meta name="twitter:description" content="Hi, I am Ayush. I am trying my hands on Web Development..">
     <meta name="twitter:image" content="/meta.68c3c419.jpg">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
-    <script src="/js.f91db0e0.js" defer=""></script>
+    <!-- <script src="/js.f91db0e0.js" defer=""></script> -->
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico"
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 </head>
 
 <body class="vsc-initialized">
@@ -34,7 +34,7 @@
                 <li class="navigation__item"> <a href="#about" class="navigation__link"><span>01</span>About</a> </li>
                 <li class="navigation__item"> <a href="#skill" class="navigation__link"><span>02</span>Skills</a> </li>
                 <li class="navigation__item"> <a href="#work" class="navigation__link"><span>03</span>Work</a> </li>
-                <li class="navigation__item"> <a href="#popup" class="navigation__link"><span>04</span>Hire Me</a> </li>
+                <li class="navigation__item"> <a href="#popup" class="navigation__link"><span>04</span>CV</a> </li>
                 <li class="navigation__item"> <a href="#footer" class="navigation__link"><span>05</span>Contact</a>
                 </li>
             </ul>
@@ -47,17 +47,6 @@
         </div>
     </header>
     <main role="main">
-        <!-- <section class="intro">
-            <div class="row">
-                <h2 class="heading-secondary">Nice to Have You Here</h2>
-                <p class="intro-text"> Are You looking for a fast-performing and user-friendly website to represent your
-                    product or business? perhaps you are looking for any kind of consultation? or maybe you have an idea
-                    you’d like to express but need a professional with vision in order to actually create it? maybe
-                    you’d like to collaborate? moreover, feel free to reach out to me with some advice, I’d love to hear
-                    some constructive criticism about any of my projects! </p> <a
-                    href="https://twitter.com/AyushKumar12" class="btn">Say Hello !</a>
-            </div>
-        </section> -->
         <section class="skill" id="skill">
             <div class="u-text-center">
                 <h2 class="heading-secondary">My Skillset</h2>
@@ -72,7 +61,7 @@
                         href="https://parceljs.org/">Parcel. </a>I love things that are open source I use <a
                         target="_blank" href="https://code.visualstudio.com/">VS Code</a> as my editor and <a href="https://www.microsoft.com/en-in/windows">Windows</a> and <a
                         target="_blank" href="https://www.ubuntu.com/">Ubuntu</a> as My operating system. </p> <a
-                    href="#work" class="btn">My Work</a>
+                    href="#work" class="btn black_bg">My Work</a>
             </div>
         </section>
         <section class="about" id="about">
@@ -93,20 +82,21 @@
             </div>
             <div class="row">
                 <div class="craft__item"> <img src="thumbnail.png" alt="Browser" class="craft__img">
-                    <h3 class="heading-tertiary">Hackathon Gendered Pronoun Resolution</h3>
+                    <br><br>
+                    <a class="dash" target="_blank" href="https://github.com/kumayu0108/Gendered-Pronoun-Resolution"><h3 class="heading-tertiary">Hackathon Gendered Pronoun Resolution</h3></a>
                     <p class="craft__description"> Pronoun resolution is part of coreference resolution, the task of pairing an expression to its referring entity. This is an important task for natural language understanding,
                          and the resolution of ambiguous pronouns is a longstanding challenge. Solution write-up is at: <a class="dash" target="_blank" href="https://www.kaggle.com/ayushkumar0801/a-simple-bert-model">A Simple Bert Model</a></p>
                 </div>
                 <div class="craft__item hack"></div>
-                <div class="craft__item"> <img src="style_transfer.png" alt="Server" class="craft__img"><br><br><br>
-                    <h3 class="heading-tertiary">Style Transfer using Pytorch</h3>
+                <div class="craft__item"> <img src="style_transfer.png" alt="Server" class="craft__img"><br><br>
+                    <a class="dash" target="_blank" href="https://github.com/kumayu0108/Style-Transfer-using-Pytorch"><h3 class="heading-tertiary">Style Transfer using Pytorch</h3></a>
                     <p class="craft__description"> I used Pytorch to transfer ”style” of one image to another.
                         I used a pretrained 19 layer VGG model and then used outputs of different convolutional layers to grab deatails
                         within the image. </p>
                 </div>
                 <div class="craft__item hack"></div>
-                <div class="craft__item"> <img src="UTKFace.png" alt="Server" class="craft__img"><br><br><br>
-                    <h3 class="heading-tertiary">Detecting And Tackling Bias in Machine Learning Models (Ongoing)</h3>
+                <div class="craft__item"> <img src="UTKFace.png" alt="Server" class="craft__img"><br><br>
+                    <a class="dash" target="_blank" href="https://github.com/kumayu0108/Analysing-Bias-in-UTKFace-Dataset"><h3 class="heading-tertiary">Detecting And Tackling Bias in Machine Learning Models (Ongoing)</h3></a>
                     <p class="craft__description"> The initial approach focuses on predicting the age and gender based on images of faces, 
                         with the academic goal of implementing exploring bias in image classification. </p>
                 </div>
@@ -123,7 +113,7 @@
                 </p> 
                         <img src="Screenshot_20201003-194102.jpg" alt=""
                     class="work__construction">
-                    <a href="#popup" class="btn btn--hire">Hire Me &nbsp;→</a>
+                    <a href="https://github.com/kumayu0108" class="btn btn--hire black_bg white_txt">Github &nbsp;→</a>
             </div>
         </section>
     </main>
@@ -152,7 +142,7 @@
                     <p class="popup__text">Grab My CV to find out more about me.</p>
                     <div class="popup__buttons"> <a
                             href="https://drive.google.com/file/d/13_vCIASVJuM-3DgEjFsTXrETVWMqoSj7/view"
-                            class="btn">Download</a> </div>
+                            class="btn black_bg">Download</a> </div>
                 </div>
                 <div class="popup__contact-info">
                     <nav>
