--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
                     I have a diverse set of skills from design to <a target="_blank"
                         href="https://www.w3.org/TR/2016/REC-html51-20161101/dom.html">Semantic</a> and well structured
                     HTML + reasonable and efficient CSS + JS + <a
-                        target="_blank" href="https://reactjs.org/">React</a> ( for building complex UIs ) + <a
-                        target="_blank" href="https://redux.js.org/">Redux</a> ( for state management ) + module
-                    bundlers like <a target="_blank" href="http://webpack.js.org/">Webpack</a> and <a target="_blank"
-                        href="https://parceljs.org/">Parcel. </a>I love things that are open source I use <a
+                        target="_blank" href="https://reactjs.org/">React</a> ( for building complex UIs ). </a>I love things that are open source I use <a
                         target="_blank" href="https://code.visualstudio.com/">VS Code</a> as my editor and <a href="https://www.microsoft.com/en-in/windows">Windows</a> and <a
                         target="_blank" href="https://www.ubuntu.com/">Ubuntu</a> as My operating system. </p> <a
                     href="#work" class="btn black_bg">My Work</a>
